2008-08-05  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkprintoperation-win32.c: Don't need to declare
	IPrintDialogCallback with mingw64 either. It seems to come with
	newer versions of the headers.

2008-08-05  Tor Lillqvist  <tml@novell.com>

	Bug 544684 - Win64 issue, window handles are assumed to be 32-bit

	* gtk/gtksocket-win32.c: Don't cast HWND to guint, pass it as such
	as the GdkNativeWindow parameter to
	gtk_window_remove_embedded_xid(). Debugging printout format fixes.

	* gtk/gtkwin32embed.h
	* gtk/gtkwin32embed.c: Change the types of wparam and lparam
	parameters to actually be WPARAM and LPARAM.

	* gtk/gtkplug-win32.c: Adapt accordingly.

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtksettings.c: Improve a setting nick: 'aureal' is not really
	a word, use 'audible' instead.

2008-08-05  Tor Lillqvist  <tml@novell.com>

	* gtk/updateiconcache.c (write_bucket): Enclose ?: expression
	with parens so cast covers all of it.

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	Bug 382291 – Automatically dim the combobox when the model is empty

	* gtk/gtk.symbols:
	* gtkcombobox.[hc]: Add a GtkComboBox::button-sensitivity
	property with getter and setter to control the sensitity of
	empty combo boxes. Patch by Carlos Garnacho, Sven Herzberg,
	Christian Dywan and others.

	* README.in: Add a note about automatic combobox sensitivity.
	
2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/tests/Makefile.am: Skip crossingevents test when
	running make check, since it doesn't work on a naked
	X server.

2008-08-05  Tor Lillqvist  <tml@novell.com>

	Bug 544684 - Win64 issue, window handles are assumed to be 32-bit

	* gdk/gdkdnd.h
	* gdk/gdkdnd.c
	* gdk/win32/gdkdnd-win32.c
	* gdk/x11/gdkdnd-x11.c: Change return value and type of window id
	from guint32 to GdkNativeWindow for
	gdk_drag_get_protocol_for_display() and
	gdk_drag_get_protocol(). This is not an API break on existing
	platforms, as GdkNativeWindow has been guint32 for them