@@ -1,5 +1,11 @@
 2008-08-05  Tor Lillqvist  <tml@novell.com>
 
+	* gtk/gtkgc.c: Cast tile, stipple and clip_mask pointers to
+	gintptr when calculating hash, so we get all of the pointer bits
+	on Win64 where long is 32 bits.
+
+2008-08-05  Tor Lillqvist  <tml@novell.com>
+
 	* gtk/gtkprintoperation-win32.c: Don't need to declare
 	IPrintDialogCallback with mingw64 either. It seems to come with
 	newer versions of the headers.
